--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $box-size: 100px;
-$margin-left: 103px;
+$margin-left: 101px;
 $month-lengths: (
   28: 29,
   29: 30,
@@ -13,5 +13,14 @@ $weekday-offsets: (
   'thu': $margin-left * 3,
   'fri': $margin-left * 4,
   'sat': $margin-left * 5,
-  'sun': $margin-left * 6
+  'sun': $margin-left * 6,
+);
+$start-days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
 );
