fixed code in scss

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,14 +24,14 @@ body {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $gap;
 
   $days: mon, tue, wed, thu, fri, sat, sun;
 
   @each $day in $days {
     $i: list.index($days, $day);
     &--start-day-#{$day} .calendar__day:first-child {
-      margin-left: calc(($width * ($i - 1)) + (($i - 1) * 1px));
+      margin-left: calc(($width * ($i - 1)) + (($i - 1) * $gap));
     }
   }
 
@@ -54,19 +54,21 @@ body {
     height: 100px;
     font-size: 30px;
 
-    transition: all 500ms linear 500ms;
+    transition:
+      transform 500ms linear 500ms,
+      background-color 500ms linear 500ms;
+
+    &:hover {
+      cursor: pointer;
+
+      transform: translateY(-20px);
+      background-color: $background-color-hover;
+    }
 
     @for $number from 1 through 31 {
       &:nth-child(n + #{$number})::after {
         box-sizing: inherit;
         content: '#{$number}';
-      }
-
-      &:hover {
-        cursor: pointer;
-
-        transform: translateY(-20px);
-        background-color: $background-color-hover;
       }
     }
   }
