--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
-@import '../styles/utils/variables';
+@import './utils/variables';
 
 body {
   margin: 0;
-
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   text-align: center;
@@ -15,13 +15,12 @@ body {
 }
 
 .calendar {
-  margin-left: 14px;
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
   padding: $padding;
 
-  width: calc(#{$day-size} * #{$week} + #{$padding} * 2);
+  width: calc(#{$day-size} * #{$week} + (#{$gap} * 6));
 
   &__day {
     box-sizing: border-box;
