--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,14 @@
 @import './main';
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
 }
