--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,55 +1,60 @@
-$calendar-day-size: 100px;
-$calendar-gap-size: 1px;
-$calendar-font-size: 30px;
-$weekdays: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+$block-color: #eee;
+$block-size: 100px;
+$block-gap: 1px;
+$colmuns: 7;
+$padding: 10px;
+$calendar-size: calc($block-size * $colmuns + $block-gap * ($colmuns - 1));
+$days-of-week: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
 
 .calendar {
-  width: 7 * ($calendar-day-size + $calendar-gap-size);
-  padding: 10px;
+  width: $calendar-size;
   display: flex;
+  padding: $padding;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: $block-gap;
 
-  @each $start-day, $column in $weekdays {
-    &--start-day-#{$start-day} &__day:first-child {
-      margin-left: calc(#{$column} * ($calendar-day-size + $calendar-gap-size));
+  @each $day, $offset in $days-of-week {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: calc(#{$offset} * ($block-size + $block-gap));
     }
   }
 
-  &__board {
-    display: flex;
-    flex-wrap: wrap;
-    gap: $calendar-gap-size;
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
   }
 
   &__day {
-    box-sizing: border-box;
-    height: $calendar-day-size;
-    width: $calendar-day-size;
-    border: 1px solid black;
-    background-color: #eee;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 0.5s;
-
-    @for $day from 1 through 31 {
-      &:nth-child(n + #{$day})::before {
-        content: '#{$day}';
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
+    background-color: $block-color;
+    width: $block-size;
+    height: $block-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    transition: all 0.5s;
 
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
     }
-  }
 
-  @for $day from 28 through 31 {
-    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
-      display: none;
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::after {
+        content: '#{$day}';
+      }
     }
   }
 }
