add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,79 @@
+$days-count: 31;
+$day-size: 100px;
+$day-gap: 1px;
+$day-color: #eee;
+$border: 1px solid black;
+$calendar-columns: 7;
+$font-size: 30px;
+$day-font-family: Arial, Helvetica, sans-serif;
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $calendar-columns * $day-size + ($calendar-columns - 1) + $day-gap +
+    $calendar-columns * 2;
+  counter-reset: day 0;
+}
+
+@for $days from 28 through 31 {
+  .calendar--month-length-#{$days} {
+    .calendar__day:nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+}
+
+.calendar__day {
+  width: $day-size;
+  height: $day-size;
+  background-color: $day-color;
+  border: $border;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
+  margin-right: $day-gap;
+  margin-bottom: $day-gap;
+
+  &::before {
+    content: counter(day);
+    counter-increment: day;
+    font-size: $font-size;
+    font-family: $day-font-family;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: #ffbfcb;
+    transform: translateY(-20px);
+    transition-duration: 0.5s;
+  }
+}
+
+@each $day,
+  $margin
+    in (
+      mon: 0,
+      tue: $day-size * 1 + $day-gap,
+      wed: $day-size * 2 + $day-gap * 2,
+      thu: $day-size * 3 + $day-gap * 3,
+      fri: $day-size * 4 + $day-gap * 4,
+      sat: $day-size * 5 + $day-gap * 5,
+      sun: $day-size * 6 + $day-gap * 6
+    )
+{
+  .calendar--start-day-#{$day} {
+    .calendar__day:nth-child(1) {
+      margin-left: $margin;
+    }
+  }
 }
