add task solution

--- a/src/styles/utils/mixin.scss
+++ b/src/styles/utils/mixin.scss
@@ -7,8 +7,8 @@
 }
 
 @mixin weak-day-lentgh {
-  @each $weak-day, $index in $start-day {
-    &--start-day-#{$weak-day} :nth-child(1) {
+  @each $week-day, $index in $start-day {
+    &--start-day-#{$week-day} :nth-child(1) {
       margin-left: $cellSize * $index + $index;
     }
   }
