--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,10 @@
-$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$days: mon 0,
+  tue 1,
+  wed 2,
+  thu 3,
+  fri 4,
+  sat 5,
+  sun 6;
 $day-size: 100px;
 $day-border: 1px;
 $day-gap: 1px;
