--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -6,27 +6,26 @@
   padding: $day-padding;
 
   &__day {
+    display: flex;
     box-sizing: border-box;
-    background-color: #eee;
-    border: 1px solid #000;
+    background-color: $default-bg;
+    border: $day-border solid $border-color;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 100px;
-    transition-duration: 0.5s;
-    display: flex;
+    width: $day-size;
+    height: $day-size;
+    transition-duration: $day-transform-duration;
+    font-size: $day-font-size;
+    font-family: $day-font-family;
 
     &::before {
       content: '';
-
-      font-size: $day-font-size;
-      font-family: $day-font-family;
     }
 
     &:hover {
       cursor: pointer;
-      background-color: #ffbfcb;
-      transition-duration: 0.5s;
+      background-color: $hover-bg;
+
       transform: translateY(-20px);
     }
   }
