--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,8 @@ $day-gap: 1px;
 $day-padding: 10px;
 $default-bg: #eee;
 $hover-bg: #ffbfcb;
-$day-transition-duration: 0.5s;
+$border-color: #000;
+$day-transform-duration: 0.5s;
 $day-font-size: 30px;
 $day-font-family: Arial, sans-serif;
 $calendar-width: $day-size * 7 + $day-gap * 6;
