--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100dvw;
 }
+
+@import 'main';
