--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100dvw;
+  width: 100vw;
 }
 
 @import 'main';
+
