add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
     font-size: $cellFontHeight;
 
     &:hover {
+      background-color: $hoverCollor;
       cursor: pointer;
       transform: translateY($translateY);
       transition: transform $transformDuration;
