add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,12 +3,7 @@
   flex-wrap: wrap;
   padding: $padding-size;
   gap: $gap-size;
-  width: calc(7 * #{$day-size} + 6 * #{$gap-size} + 2 * #{$padding-size});
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 7 * $day-size + 6 * $gap-size + 2 * $padding-size;
   box-sizing: border-box;
 
   &__day {
@@ -57,7 +52,7 @@
   {
     &--start-day-#{$day} {
       .calendar__day:nth-child(1) {
-        margin-left: calc($index * (#{$day-size} + #{$gap-size}));
+        margin-left: $index * ($day-size + $gap-size);
       }
     }
   }
