--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -11,8 +11,8 @@
     align-items: center;
 
     box-sizing: border-box;
-    height: 100px;
-    width: 100px;
+    height: $column-size;
+    width: $column-size;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
@@ -20,34 +20,29 @@
     border: 1px solid black;
 
     &:hover {
-      transition-property: all 0.5s;
+      transition-property: transform, background-color;
+      transition-duration: 0.5s;
       transform: translateY(-20px);
       cursor: pointer;
-      background-color: #ffbfcb;
+      background-color: $hover-color;
     }
   }
-}
 
-@for $day-number from 1 through 31 {
-  .calendar :nth-child(#{$day-number})::before {
-    content: '#{$day-number}';
+  @for $day-number from 1 through 31 {
+    & :nth-child(#{$day-number})::before {
+      content: '#{$day-number}';
+    }
   }
-}
 
-// .calendar :first-child {
-//   margin-left: $column-size * 6 + $gap-size * 6;
-// }
-
-$week-days: ('mon' 1, 'tue' 2, 'wen' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
-
-@each $day, $num in $week-days {
-  .calendar--start-day-#{$day} :first-child {
-    margin-left: $gap-size * ($num - 1) + ($num - 1) * $column-size;
+  @each $day, $num in $week-days {
+    &--start-day-#{$day} :first-child {
+      margin-left: ($gap-size * ($num - 1)) + (($num - 1) * $column-size);
+    }
   }
-}
 
-@for $last-days from 28 through 31 {
-  .calendar--month-length-#{$last-days} :nth-child(n + #{$last-days + 1}) {
-    display: none;
+  @for $last-days from 28 through 31 {
+    &--month-length-#{$last-days} :nth-child(n + #{$last-days + 1}) {
+      display: none;
+    }
   }
 }
