--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
-body {
+@import './util/variables';
+@import './blocks/calendar';
+
+.page {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
