--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,14 +6,7 @@
   gap: 1px;
   padding: $padding;
 
-  $days:
-    mon 0,
-    tue 1,
-    wed 2,
-    thu 3,
-    fri 4,
-    sat 5,
-    sun 6;
+  $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
   @each $day, $day-number in $days {
     &--start-day-#{$day} {
