--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -16,7 +16,9 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition-duration: 500ms;
+    transition:
+      background-color 500ms,
+      transform 500ms;
 
     &::before {
       font-family: Arial, sans-serif;
