--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,6 @@ body {
     height: $day-size;
     width: $day-size;
     border: 1px solid black;
-    animation: translateY(-20px);
 
     @for $number from 1 through 31 {
       &:nth-child(#{$number})::before {
@@ -40,7 +39,8 @@ body {
     &:hover {
       cursor: pointer;
       background-color: $bg-hover;
-      transition: transform 500ms;
+      transform: translateY(-20px);
+      animation: transform 500ms;
     }
   }
 
