--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,3 @@
-// Variáveis
 $day-size: 100px;
 $day-gap: 1px;
 $border-size: 1px;
@@ -10,6 +9,7 @@ $hover-background: #ffbfcb;
 $transition-duration: 0.5s;
 $columns: 7;
 $days-in-week: 7;
+$display-flex: flex;
 
 * {
   box-sizing: border-box;
@@ -21,18 +21,17 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
-  display: flex;
+  font-family: $font-family;
+  font-size: $font-size;
+  display: $display-flex;
 }
 
-// Bloco Calendar
 .calendar {
   flex-wrap: wrap;
   gap: 1px;
   width: 726px;
   padding: 10px;
-  display: flex;
+  display: $display-flex;
 
   &__day {
     background-color: #eee;
@@ -42,15 +41,13 @@ body {
     width: 100px;
     height: 100px;
     transition-duration: 0.5s;
-    display: flex;
+    display: $display-flex;
 
-    // Adiciona números usando ::before e @for loop
     &::before {
       content: '';
       position: absolute;
     }
 
-    // Efeito de hover
     &:hover {
       cursor: pointer;
       background-color: $hover-background;
@@ -64,14 +61,12 @@ body {
     }
   }
 
-  // Modificador para definir o número de dias no mês
   @for $i from 28 through 31 {
     &--month-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
 
-  // Modificador para definir o primeiro dia da semana
   @each $day,
     $margin in (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6)
   {
@@ -80,7 +75,6 @@ body {
     }
   }
 
-  // Adiciona números aos dias
   @for $i from 1 through 31 {
     .calendar__day:nth-child(#{$i})::before {
       content: '#{$i}';
