add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,15 @@
-@import './utils/variables';
-@import './utils/cycles';
+$cell-size: 100px;
+$default-month-length: 31;
+$days-of-week: (
+  'mon': '0',
+  'tue': '1',
+  'wed': '2',
+  'thu': '3',
+  'fri': '4',
+  'sat': '5',
+  'sun': '6',
+);
+$gap: 1px;
 
 * {
   margin: 0;
@@ -11,6 +21,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
 }
 
 .calendar {
@@ -28,12 +40,36 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition-duration: 0.5s;
 
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      transition-duration: 0.5s;
     }
+  }
+}
+
+@each $day, $index in $days-of-week {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: calc(#{$cell-size} * #{$index} + $gap * #{$index});
+    }
+  }
+}
+
+@for $days from 28 through 31 {
+  .calendar--month-length-#{$days} {
+    @for $i from ($days + 1) through 32 {
+      .calendar__day:nth-child(#{$i}) {
+        display: none;
+      }
+    }
+  }
+}
+
+@for $i from 1 through $default-month-length {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
   }
 }
