--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,13 +1,2 @@
-$cell-size: 100px;
-$default-month-length: 31;
-$days-of-week: (
-  'mon': '0',
-  'tue': '1',
-  'wed': '2',
-  'thu': '3',
-  'fri': '4',
-  'sat': '5',
-  'sun': '6',
-);
-$start-day-index: 7;
-$gap: 1px;
+@import './cycles';
+@import '../index';
