add task calendar 2

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -28,7 +28,7 @@
     @include square($cell-size);
 
     cursor: pointer;
-    transition: transform 500ms, background-color 500ms;
+    transition: transform 0.5s, background-color 0.5s;
 
     @for $index from 1 through $days-of-month {
       &:nth-child(#{$index})::before {
@@ -37,7 +37,7 @@
     }
 
     &:hover {
-      background-color: #fcd;
+      background-color: #FFBFCB;
       transform: translateY(-20px);
     }
   }
