add task change calendar

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,15 +1,16 @@
-.page {
-  &__body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
+* {
+  margin: 0;
+}
 
-    font-family: Arial, sans-serif;
-    font-size: 30px;
-    margin: 0;
+html {
+  font-family: $font-family;
+  font-size: $font-size;
+}
 
-    counter-reset: day 0;
-  }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  counter-reset: day;
+  height: 100vh;
 }
