--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,56 +1,43 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  width: 706px;
-  box-sizing: border-box;
+  gap: $gap-size;
+  width: $main-width;
+
+  @each $day, $index in $days {
+    &--start-day-#{$day} > :first-child {
+      margin-left: (($day-size * $index) + $index);
+    }
+  }
 
   &__day {
     display: flex;
+    box-sizing: border-box;
     justify-content: center;
     align-items: center;
+    background-color: #eee;
 
     height: $day-size;
     width: $day-size;
 
-    background-color: #eee;
-    border: 1px solid black;
-
+    border: $border-size solid black;
     transition-duration: 0.5s;
+    cursor: pointer;
 
-    &::before {
-      content: counter(day);
-      counter-increment: day;
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+      }
     }
 
     &:hover {
-      cursor: pointer;
       transform: translateY(-20px);
       background-color: #ffbfcb;
     }
   }
 
-  $days: (
-    mon: 0,
-    tue: 101px,
-    wed: 202px,
-    thu: 303px,
-    fri: 404px,
-    sat: 505px,
-    sun: 606px,
-  );
-
-  @each $name-of-day, $margin-for-day in $days {
-    &--start-day-#{$name-of-day} &__day:first-child {
-      margin-left: $margin-for-day;
-    }
-  }
-
-  @for $leght-of-month from 29 through 32 {
-    &--month-length-#{$leght-of-month
-      -
-      1}
-      &__day:nth-child(n + #{$leght-of-month}) {
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} > :nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
