--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,75 @@
-body {
+body,
+html {
   margin: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+$calendar-size: 100px;
+$calendar-gap: $calendar-size / 100px;
+$calendar-border: $calendar-size / 100px;
+$calendar-padding: $calendar-size / 10px;
+$calendar-font-size: 0.3 * $calendar-size;
+$calendar-animation-size: 0.2 * $calendar-size;
+$calendar-flex-width: (
+  (7 * $calendar-size) + ($calendar-gap * 6) + ($calendar-padding * 2)
+);
+$week-days: '-mon', '-tue', '-wed', '-thu', '-fri', '-sat', '-sun';
+$counter: 0;
+$base-spacing: $calendar-size + $calendar-gap;
+
+.calendar {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $calendar-gap;
+  padding: $calendar-padding;
+  width: $calendar-flex-width;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    width: $calendar-size;
+    height: $calendar-size;
+    border: $calendar-border solid black;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: $calendar-font-size;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transition: 0.5s ease;
+      transform: translateY(-$calendar-animation-size);
+    }
+  }
+
+  @each $day in $week-days {
+    &--start-day#{$day} {
+      .calendar__day:nth-child(1) {
+        margin-left: $counter * $base-spacing;
+      }
+    }
+
+    $counter: $counter + 1;
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      .calendar__day:nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
 }
