--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,9 +9,9 @@ html {
 }
 
 $calendar-size: 100px;
-$calendar-gap: $calendar-size / 100px;
-$calendar-border: $calendar-size / 100px;
-$calendar-padding: $calendar-size / 10px;
+$calendar-gap: $calendar-size / 0.01;
+$calendar-border: $calendar-size / 0.01;
+$calendar-padding: $calendar-size / 0.1;
 $calendar-font-size: 0.3 * $calendar-size;
 $calendar-animation-size: 0.2 * $calendar-size;
 $calendar-flex-width: (
@@ -38,6 +38,7 @@ $base-spacing: $calendar-size + $calendar-gap;
     width: $calendar-size;
     height: $calendar-size;
     border: $calendar-border solid black;
+    transition: 0.5s ease;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
@@ -50,7 +51,6 @@ $base-spacing: $calendar-size + $calendar-gap;
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
-      transition: 0.5s ease;
       transform: translateY(-$calendar-animation-size);
     }
   }
