--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,3 @@
-body,
-html {
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 $calendar-size: 100px;
 $calendar-gap: $calendar-size / 100;
 $calendar-border: $calendar-size / 100;
@@ -20,6 +10,19 @@ $calendar-flex-width: (
 $week-days: '-mon', '-tue', '-wed', '-thu', '-fri', '-sat', '-sun';
 $counter: 0;
 $base-spacing: $calendar-size + $calendar-gap;
+$days-color: #eee;
+$hover-color: #ffbfcb;
+$calendar-font: Arial, Helvetica, sans-serif;
+
+body,
+html {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .calendar {
   box-sizing: border-box;
@@ -34,7 +37,7 @@ $base-spacing: $calendar-size + $calendar-gap;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #eee;
+    background-color: $days-color;
     width: $calendar-size;
     height: $calendar-size;
     border: $calendar-border solid black;
@@ -43,14 +46,14 @@ $base-spacing: $calendar-size + $calendar-gap;
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: $calendar-font;
         font-size: $calendar-font-size;
       }
     }
 
     &:hover {
       cursor: pointer;
-      background-color: #ffbfcb;
+      background-color: $hover-color;
       transform: translateY(-$calendar-animation-size);
     }
   }
