--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
-body {
+@import './utils/variable';
+
+* {
   margin: 0;
+  padding: 0;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $calendar-gap;
+  width: $calendar-width;
+
+  &__day {
+    box-sizing: border-box;
+    width: $days-width;
+    height: $days-height;
+    border: $day-border solid $days-border-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $days-bg-color;
+
+    &:hover {
+      background-color: $days-bg-color-hover;
+      transform: translate(0, -20px);
+      transition-duration: 0.5s;
+      cursor: pointer;
+    }
+  }
+
+  @for $date from 1 through 31 {
+    &__day:nth-child(#{$date})::before {
+      content: '#{$date}';
+    }
+  }
+
+  @each $day, $col in $weekday {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: calc($col * $calendar-day-width);
+    }
+  }
+
+  @for $date from 28 to 31 {
+    &--month-length-#{$date} &__day:nth-child(n + #{$date + 1}) {
+      display: none;
+    }
+  }
 }
