--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,14 @@ $start-days: (
 $month-lengths: (28, 29, 30, 31);
 $calendar-width: 7 * 101px;
 
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
 .calendar {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
