--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,9 +9,9 @@ $start-days: (
   sun: 6,
 );
 $month-lengths: (28, 29, 30, 31);
-$calendar-width: 7 * 101px;
+$calendar-width: 706;
 
-body {
+.page {
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -41,6 +41,9 @@ body {
     background-color: $color-block;
     transition-duration: 0.5s;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__day:hover {
