--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,78 +1,3 @@
-$calendar-size: 100px;
-$calendar-gap: $calendar-size / 100;
-$calendar-border: $calendar-size / 100;
-$calendar-padding: $calendar-size / 10;
-$calendar-font-size: 0.3 * $calendar-size;
-$calendar-animation-size: 0.2 * $calendar-size;
-$calendar-flex-width: (
-  (7 * $calendar-size) + ($calendar-gap * 6) + ($calendar-padding * 2)
-);
-$week-days: '-mon', '-tue', '-wed', '-thu', '-fri', '-sat', '-sun';
-$counter: 0;
-$base-spacing: $calendar-size + $calendar-gap;
-$days-color: #eee;
-$hover-color: #ffbfcb;
-$calendar-font: Arial, Helvetica, sans-serif;
-
-body,
-html {
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  gap: $calendar-gap;
-  padding: $calendar-padding;
-  width: $calendar-flex-width;
-
-  &__day {
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $days-color;
-    width: $calendar-size;
-    height: $calendar-size;
-    border: $calendar-border solid black;
-    transition: 0.5s ease;
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
-        content: '#{$i}';
-        font-family: $calendar-font;
-        font-size: $calendar-font-size;
-      }
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: $hover-color;
-      transform: translateY(-$calendar-animation-size);
-    }
-  }
-
-  @each $day in $week-days {
-    &--start-day#{$day} {
-      .calendar__day:nth-child(1) {
-        margin-left: $counter * $base-spacing;
-      }
-    }
-
-    $counter: $counter + 1;
-  }
-
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} {
-      .calendar__day:nth-child(n + #{$i + 1}) {
-        display: none;
-      }
-    }
-  }
-}
+@use './variables';
+@import './main';
+@import './calendar';
