adding min-height

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -7,6 +7,7 @@
   gap: $calendar-gap;
   padding: $calendar-padding;
   width: $calendar-flex-width;
+  min-height: $calendar-flex-height;
 
   &__day {
     box-sizing: border-box;
