--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $calendar-animation-size: 0.2 * $calendar-size;
 $calendar-flex-width: (
   (7 * $calendar-size) + ($calendar-gap * 6) + ($calendar-padding * 2)
 );
+$calendar-flex-height: ((4 * $calendar-size) + (3 * $calendar-gap));
 $week-days: '-mon', '-tue', '-wed', '-thu', '-fri', '-sat', '-sun';
 $counter: 0;
 $base-spacing: $calendar-size + $calendar-gap;
