--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,8 +8,7 @@ $calendar-flex-width: (
   (7 * $calendar-size) + ($calendar-gap * 6) + ($calendar-padding * 2)
 );
 $calendar-flex-height: ((4 * $calendar-size) + (3 * $calendar-gap));
-$week-days: '-mon', '-tue', '-wed', '-thu', '-fri', '-sat', '-sun';
-$counter: 0;
+$week-days: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
 $base-spacing: $calendar-size + $calendar-gap;
 $days-color: #eee;
 $hover-color: #ffbfcb;
