Fixing deploy pages

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 $calendar-size: 100px;
-$calendar-gap: $calendar-size / 100;
-$calendar-border: $calendar-size / 100;
-$calendar-padding: $calendar-size / 10;
+$calendar-gap: calc($calendar-size / 100);
+$calendar-border: calc($calendar-size / 100);
+$calendar-padding: calc($calendar-size / 10);
 $calendar-font-size: 0.3 * $calendar-size;
 $calendar-animation-size: 0.2 * $calendar-size;
 $calendar-flex-width: (
