--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@ body {
   padding: 10px;
   flex-wrap: wrap;
   gap: $base-gap;
-  width: $base-size * 7 + $base-gap * 6;
+  width: ($base-size * 7) + ($base-gap * 6);
   background-color: #fff;
 
   &__day {
@@ -23,7 +23,7 @@ body {
     width: $base-size;
     border: 1px solid #000;
     background-color: $day-color;
-    transition: all 0.5s;
+    transition: background-color transform 0.5s;
 
     &::before {
       display: flex;
@@ -48,7 +48,7 @@ body {
 
 @each $day, $index in $day-names {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: ($index - 1) * $base-size + ($index - 1) * $base-gap;
+    margin-left: (($index - 1) * $base-size) + (($index - 1) * $base-gap);
   }
 }
 
