--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,43 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 706px;
+  padding: 0;
+  list-style: none;
+  cursor: pointer;
+  margin: 81.5px auto;
+}
+
+.calendar__day {
+  position: relative;
+  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  background-color: #eee;
+  text-align: center;
+}
+
+.calendar__day--1 {
+  margin-left: 605px;
+}
+
+$days: 31;
+
+@for $i from 1 through $days {
+  .calendar__day--#{$i}:after {
+    content: '#{$i}';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+  }
+}
