add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,15 @@
+$day-size: 100px;
+$days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
+$gap: 1px;
+$padding: 10px;
+
+@import './main';
+
 body {
   margin: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
