--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,9 +5,12 @@ $padding: 10px;
 
 @import './main';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  box-sizing: border-box;
   height: 100vh;
   display: flex;
   justify-content: center;
