--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,20 +23,12 @@ $days: (
   sat: 5,
 );
 
-.calendar__block {
+.calendar_block {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.calendar {
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-wrap: wrap;
-  width: $width-calendar;
-  gap: $gap;
 
   @each $day, $index in $days {
     &--start-day-#{$day} {
@@ -45,6 +37,14 @@ $days: (
       }
     }
   }
+}
+
+.calendar {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  width: $width-calendar;
+  gap: $gap;
 }
 
 @for $i from 1 through 31 {
