--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+$days: 31;
+$month-length: 28, 29, 30, 31;
+$start-day: mon, thu, wed, thu, fri, sat, sun;
+
 body {
   margin: 0;
 }
@@ -23,13 +27,17 @@ body {
   border: 1px solid black;
   background-color: #eee;
   text-align: center;
-}
+  transition-duration: 0.5s;
 
-.calendar__day--1 {
-  margin-left: 605px;
-}
+  &:hover {
+    background-color: #ffbfcb;
+    transform: translate(0, -20px);
+  }
 
-$days: 31;
+  &--1 {
+    margin-left: 606px;
+  }
+}
 
 @for $i from 1 through $days {
   .calendar__day--#{$i}:after {
