--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,14 +48,10 @@ body {
       transform: translateY(-20px);
     }
   }
-
-  &__day:first-of-type {
-    margin-left: ($width-day * 6) + $gap * 6;
-  }
 }
 
 @for $i from 1 through 31 {
-  ul:nth-child(#{$i})::before {
+  .calendar__day:nth-child(#{$i})::before {
     content: '#{$i}';
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
