--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,12 @@ $width-day: 100px;
 $gap: 1px;
 $start-day: (
   mon 0,
-  tue ($width-day) + $gap,
-  wed ($width-day * 2) + ($gap * 2),
-  thu ($width-day * 3) + ($gap * 3),
-  fri ($width-day * 4) + ($gap * 4),
-  sat ($width-day * 5) + ($gap * 5),
-  sun ($width-day * 6) + ($gap * 6)
+  tue ($width-day + $gap),
+  wed (($width-day * 2) + ($gap * 2)),
+  thu (($width-day * 3) + ($gap * 3)),
+  fri (($width-day * 4) + ($gap * 4)),
+  sat (($width-day * 5) + ($gap * 5)),
+  sun (($width-day * 6) + ($gap * 6))
 );
 
 body {
