--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,51 +4,58 @@ body {
   justify-content: center;
   align-items: center;
   width: 100vw;
+  height: 100vh;
 }
 
-.calendar{
-  display: flex;
-  list-style: none;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  gap: $calendar-gap;
-  width: calc(7 * $calendar-day-width + 2px + $calendar-gap * 6 + 2 * $calendar-padding);
-
-  &__day {
-    height: $calendar-day-height;
-    width: $calendar-day-width;
-    border: solid 1px black;
-    background-color: $calendar-day-color;
-    flex-basis: calc(100% / 7);
+  .calendar {
+    flex-wrap: wrap;
+    gap: $calendar-gap;
+    width: calc(7 * $calendar-day-width + 7px);
+    list-style: none;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 500ms;
 
-    &:hover {
-      background-color: #FFBFCB;
-      transform: translateY(-20px);
+    &__day {
+      cursor: pointer;
+      background-color: $calendar-day-color;
+      border: 1px solid black;
+      justify-content: center;
+      align-items: center;
+      height: $calendar-day-height;
+      width: $calendar-day-width;
+      transition: 500ms;
+      display: flex;
+      box-sizing: border-box;
 
-    }
+      &:hover {
+        background-color: #FFBFCB;
+        transform: translateY(-20px);
 
-    &::before {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: $calendar-day-font-size;
-      content: "";
-    }
+      }
 
-    @for $number from 1 through $calendar-lenght {
-      &:nth-child(#{$number})::before {
-        content: "#{$number}";
+      &::before {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: $calendar-day-font-size;
+        content: "";
+      }
+
+      @for $number from 1 through $calendar-lenght {
+        &:nth-child(#{$number})::before {
+          content: "#{$number}";
+        }
       }
     }
 
-    @each $dayName, $numberOfDay in $days {
-      &--start-#{$dayName} {
-        margin-left: ($numberOfDay - 1) * ($calendar-day-width + $calendar-gap);
+    @each $day, $index in $days {
+      &--start-#{$day} > :first-child {
+        margin-left: ($index - 1) * ($calendar-day-width + $calendar-gap) ;
       }
     }
+
+    @for $i from $calendar-lenght through 31 {
+      &__day:nth-child(#{$i + 1}) {
+        display: none;
+      }
+    }
+
   }
-}
 
