--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,8 +1,15 @@
 $calendar-day-color: #eee;
-$calendar-lenght: 31;
+$calendar-length: 31;
 $calendar-day-height: 100px;
 $calendar-day-width: 100px;
 $calendar-day-font-size: 30px;
 $calendar-padding: 10px;
 $calendar-gap: 1px;
-$days: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+$days:
+  mon 1,
+  tue 2,
+  wed 3,
+  thu 4,
+  fri 5,
+  sat 6,
+  sun 7;
