--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,8 +5,7 @@ $calendar-day-width: 100px;
 $calendar-day-font-size: 30px;
 $calendar-padding: 10px;
 $calendar-gap: 1px;
-$days:
-  mon 1,
+$days: mon 1,
   tue 2,
   wed 3,
   thu 4,
