--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -51,8 +51,7 @@ body {
       }
     }
 
-    @for $i from $calendar-length
-     through 31 {
+    @for $i from $calendar-length through 31 {
       &__day:nth-child(#{$i + 1}) {
         display: none;
       }
