--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,4 @@
-$width-day: 100px;
-$gap: 1px;
-$start-day: (
-  mon 0,
-  tue ($width-day + $gap),
-  wed (($width-day * 2) + ($gap * 2)),
-  thu (($width-day * 3) + ($gap * 3)),
-  fri (($width-day * 4) + ($gap * 4)),
-  sat (($width-day * 5) + ($gap * 5)),
-  sun (($width-day * 6) + ($gap * 6))
-);
+@import './utils/variables';
 
 body {
   height: 100%;
@@ -58,10 +48,10 @@ body {
   }
 }
 
-@each $day, $marg in $start-day {
+@each $day, $value in $start-day {
   .calendar--start-day-#{$day} {
     .calendar__day:first-of-type {
-      margin-left: $marg;
+      margin-left: ($gap + $width-day) * $value;
     }
   }
 }
