--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,9 @@
-$calendar-padding: 10px;
-$element-day-size: 100px;
-$space-between-days: 1px;
-$max-width-calendar: (
-  7 * $element-day-size + 6 * $space-between-days + 2 * $calendar-padding
-);
-$days: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+@import './utils/variables';
+
+html {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 30px;
+}
 
 body {
   margin: 0;
@@ -20,9 +11,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 30px;
 }
 
 .calendar {
