--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -55,14 +55,13 @@ body {
     }
   }
 
-  &--start-day-#{$day} {
+  &--start-day-#{$days} {
     :first-child {
       margin-left: calc(
         #{$element-day-size * $count} + #{$space-between-days * $count}
       );
     }
   }
-
 
   @for $i from 1 through 31 {
     &__day:nth-child(#{$i}) {
@@ -80,4 +79,3 @@ body {
     }
   }
 }
-
