--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,8 @@
-// Variables
+$day-size: 100px;
+$gap: 1px;
 $calendar-padding: 10px;
-$element-day-size: 100px;
-$space-between-days: 1px;
-$max-width-calendar: 7 * $element-day-size + 6 * $space-between-days + 2 * $calendar-padding;
-$days: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+$default-month-length: 31;
+$days-of-week: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
 
 html {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
