--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,17 +50,8 @@ $calendar_week: (
     }
     &:hover {
       cursor: pointer;
-      animation: move 0.5s forwards;
+      transform: translateY($moveUp + $gap-size);
       background-color: $backgroundColorHover;
-    }
-  }
-
-  @keyframes move {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY($moveUp);
     }
   }
 
