--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ $calendar-week: (
   grid-template-columns: repeat(7, $day-size);
   gap: $gap-size;
   padding: $padding-size;
+  margin-left: 10px;
 
   &__day {
     box-sizing: border-box;
