--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -57,7 +57,10 @@ $week-days:
 
   @each $day, $day-number in $week-days {
     &--start-day-#{$day} :first-child {
-      margin-left: ($day-number - 1) * $width-cell + $gap-size * ($day-number - 1);
+      margin-left: ($day-number - 1) *
+        $width-cell +
+        $gap-size *
+        ($day-number - 1);
     }
   }
 }
