--- a/src/blocks/calendar.scss
+++ b/src/blocks/calendar.scss
@@ -1,7 +1,7 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $width-cell * $cells-in-row + $gap-size * ($cells-in-row - 1);
+  width: calc(#{$width-cell * $cells-in-row} + #{$gap-size * ($cells-in-row - 1)});
   gap: $gap-size;
 
   &__day {
@@ -44,7 +44,7 @@
 
   @each $day, $day-number in $week-days {
     &--start-day-#{$day} :first-child {
-      margin-left: ($day-number - 1) * $width-cell + $gap-size * ($day-number - 1);
+      margin-left: calc(#{$day-number - 1} * #{$width-cell} + #{$gap-size * ($day-number - 1)});
     }
   }
 }
